--- a/.gitlab-ci.yaml
+++ b/.gitlab-ci.yaml
@@ -22,5 +22,5 @@ deploy-job:
   script:
     - cd spring-boot-sample-app
     - "cf login -a ${CF_API} -u ${CF_USER} -p \"${CF_PASS}\""
-    - cf push go-sample-app -p go-sample-app --random-route 
+    - cf push sample-app -p target/spring-boot-sample-app-0.0.1-SNAPSHOT.jar --random-route
     
