--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -25,7 +25,7 @@ deploy-job:
     - cd spring-boot-sample-app
     - ./mvnw install -D skipTests
     - "cf login -a ${CF_API} -u ${CF_USER} -p \"${CF_PASS}\""
-    - cf push sample-app -p target/spring-boot-sample-app-0.0.1-SNAPSHOT.jar --random-route
+    - cf push sample-app -p target/spring-boot-sample-app-0.0.1-SNAPSHOT.jar --hostname sample-app
     
 test-job:
   stage: test-stage
