--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,21 +5,19 @@ stages:
 
 build-job:
   stage: build-stage
-  environment: 
-    name: dev
-    url: http://sample-app-chatty-duiker.cfapps.io/
+  environment:
+    - name: dev
+    - url: http://sample-app-chatty-duiker.cfapps.io/
   tags:
     - shell
   script:
-    - git clone https://github.com/cicd-hackathon-stgt/spring-boot-sample-app.git
-    - cd spring-boot-sample-app
     - ./mvnw install -D skipTests
   artifacts:
     name: "${CI_JOB_NAME}_${CI_COMMIT_REF_NAME}_${CI_JOB_ID}"
     when: always
     expire_in: 7d
     paths:
-      - "spring-boot-sample-app/target/spring-boot-sample-app-*-SNAPSHOT.jar"
+      - "target/spring-boot-sample-app-*-SNAPSHOT.jar"
 
 deploy-job:
   stage: deploy-stage
@@ -28,8 +26,8 @@ deploy-job:
   environment: dev
   script:
     - "cf login -a ${CF_API} -u ${CF_USER} -p \"${CF_PASS}\""
-    - cf push sample-app -p spring-boot-sample-app/target/spring-boot-sample-app-*-SNAPSHOT.jar --hostname sample-app
-    
+    - cf push sample-app -p target/spring-boot-sample-app-*-SNAPSHOT.jar --hostname sample-app
+
 test-job:
   stage: test-stage
   tags:
