--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,8 +6,8 @@ stages:
 build-job:
   stage: build-stage
   environment:
-    - name: dev
-    - url: http://sample-app-chatty-duiker.cfapps.io/
+    name: dev
+    url: http://sample-app-chatty-duiker.cfapps.io/
   tags:
     - shell
   script:
